--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,8 @@ jobs:
         shell: Rscript {0}
         
        - name: load r dependencies
-        run: |
-          library(dplry); library(readr); library(magrittr); library(ggplot2); library(RcppRoll); library(gghighlight); library(rmarkdown);
-        shell: Rscript {0}       
-        
+        run: Rscript -e 'library(dplry); library(readr); library(magrittr); library(ggplot2); library(RcppRoll); library(gghighlight); library(rmarkdown);'
+
       - name: download data from nyt 
         run: |
           source('./scripts/download_covid_data_from_nyt.R')
