--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         shell: Rscript {0}
         
       - name: Load r dependencies
-        run: Rscript -e 'library(dplyr); library(readr); library(magrittr); library(ggplot2); library(RcppRoll); library(gghighlight); library(rmarkdown);'
+        run: Rscript -e 'library(dplyr)' -e 'library(readr)' -e 'library(magrittr)' -e 'library(ggplot2)' -e 'library(RcppRoll)' -e 'library(gghighlight)' -e 'library(rmarkdown)'
 
       - name: Download data from nyt 
         run: |
