--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         shell: Rscript {0}
         
       - name: Render README
-        run: Rscript -e 'rmarkdown::render("README.Rmd")'
+        run: Rscript -e 'rmarkdown::render("./README.Rmd")'
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
