--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,10 @@ jobs:
           source('./scripts/plot_covid_data_from_nyt.R')
         shell: Rscript {0}
         
-      - name: Render README
-        run: Rscript -e 'rmarkdown::render("README.Rmd")'
+      - name: Render readme
+        run: |
+          source('./scripts/update_readme.R')
+        shell: Rscript {0}
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
