--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         R: [ '4.0.3' ]
-    name: R ${{ matrix.R }} sample
+    name: Updating on R ${{ matrix.R }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup R
