--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest ]
-        R: [ '4.0.3' ]
+        R: [ 'release' ]
     name: Updating on R ${{ matrix.R }}
     steps:
       - uses: actions/checkout@v2
